instructions.Instructions.scala.error
Compilation error:
Instructions:6: error: reassignment to val
  n=0
   ^Instructions:8: error: not found: value n
  n=n+1
  ^Instructions:12: error: reassignment to val
  n=0
   ^Instructions:14: error: not found: value n
  n=n+1
  ^Instructions:20: error: reassignment to val
  n=0
   ^Instructions:22: error: not found: value n
  n=n+1
  ^